--- a/css/User-driver.css
+++ b/css/User-driver.css
@@ -7,7 +7,7 @@
 
 .main{
     height: 100vh;
-    background: url(./Asset/NavifyBackgroundUserxDriver.png);
+    background: url(../Asset/NavifyBackgroundUserxDriver.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
