--- a/css/passenger.css
+++ b/css/passenger.css
@@ -5,7 +5,7 @@
 
 .main{
     height: 100vh;
-    background-image: url(./Asset/backgroundLoginuser.png);
+    background-image: url(../Asset/backgroundLoginuser.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
